# stataX

./: .gitignore  English.csv  French.csv  README.md  Release Notes.md  Release-Description.md  analysis.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CLI.md  COMMON_ERRORS.md  CONFIG.md  PLOTTING_RULES.md  REPRODUCIBILITY.md  SCOPE.md
examples/: basic_analysis.yaml  custom.yaml  environmental_style.yaml  q1_q5_custom.yaml
outputs/: regression.csv  regression.tex  run_metadata.json
src/statax/: cli.py
src/statax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/statax/artifacts/: base.py  plot.py  registry.py  table.py
src/statax/config/: loader.py  schema.py
src/statax/core/: data.py  descriptives.py  engine.py  inspect.py  stats.py  transform.py
src/statax/output/: export.py  plot_renderers.py  plot_theme.py  regression.py
tests/: test_categorical_profile.py  test_categorical_profile_from_data.py  test_categorical_profile_style.py  test_coef_plot.py  test_config.py  test_config_encoding.py  test_data.py  test_descriptives.py  test_diverging_likert.py  test_engine_with_tranform.py  test_failure_modes.py  test_heatmap_artifact.py  test_likert_plot.py  test_missing.py  test_model_matrix.py  test_multiselect_profile.py  test_pie_artifact.py  test_plot_caption_metadata.py  test_plot_theming.py  test_plots_integration.py  test_stats.py  test_tranform.py
