[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stataX"
version = "1.3.0"
description = "CLI-first statistical analysis tool inspired by Stata/SPSS"
requires-python = ">=3.14"
dependencies = [
  "Jinja2==3.1.6",
  "MarkupSafe==3.0.3",
  "matplotlib==3.10.8",
  "numpy==2.4.0",
  "packaging==25.0",
  "pandas==2.3.3",
  "patsy==1.0.2",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "PyYAML==6.0.3",
  "scipy==1.16.3",
  "six==1.17.0",
  "statsmodels==0.14.6",
  "tzdata==2025.3"
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.2"
]

[project.scripts]
statax = "statax.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]